# credit_faas

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.js  package-lock.json  package.json  serverless.yml  testCoverage.Dockerfile
.github/workflows/: release.yml  test.yml
coverage/: clover.xml
coverage/lcov-report/: index.html
docs/: PostDensityExampleResponse.json  PostDensityOptions.json  PostDensityResponse.json  openapi.yml  openapi_merged.yml
src/: copyBinaries.js  main.rs  writeYml.js
tests/: density.test.js  densityError.json  parameter1.json
