[package]
name = "credit_faas"
version = "0.1.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
edition = "2018"

[dependencies]
fang_oost = "0.14.0"
num-complex = "0.2"
rayon = "1.0.1"
cf_dist_utils = "0.8"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
loan_ec = "0.2.0"
lambda_http = { git = "https://github.com/phillyfan1138/aws-lambda-rust-runtime", rev = "b7e5da5" }
lambda_runtime = { git = "https://github.com/phillyfan1138/aws-lambda-rust-runtime", rev = "b7e5da5" }

[badges]
travis-ci = { repository = "phillyfan1138/credit_faas" }