[package]
name = "credit_faas"
version = "0.1.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
edition = "2018"

[dependencies]
fang_oost = "0.14"
num-complex = "0.2"
rayon = "1.5"
cf_dist_utils = "0.9"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
loan_ec = "0.2"
lambda_http = "0.1.1"
lambda_runtime = "0.2.1"